--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/browser-image-compression": "^1.0.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.48",
     "@types/react": "^16.9.41",
@@ -15,6 +16,7 @@
     "@types/react-timeago": "^4.1.1",
     "axios": "^0.19.2",
     "bootstrap": "^5.0.0-alpha1",
+    "browser-image-compression": "^1.0.12",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
